fix: Corringo para que o springdoc retorne array e não string